<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_active"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/active_hosts"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_import"
        android:title="@string/import_profiles"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:title="@string/export_profiles"
        app:showAsAction="never" />
</menu>
